force-app/main/default/objects/Account/fields/BlockComm__c.field-meta.xml
<CustomField>
    <fullName>BlockComm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloquear envío de marketing</label>
    <type>Checkbox</type>
</CustomField>