force-app/main/default/objects/Account/fields/CardType__c.field-meta.xml
<CustomField>
    <fullName>CardType__c</fullName>
    <defaultValue>&quot;C&quot;</defaultValue>
    <label>Clase de socio de negocios</label>
    <length>1</length>
    <type>Text</type>
</CustomField>