force-app/main/default/objects/Account/fields/CondicionPagoJD__c.field-meta.xml
<CustomField>
    <fullName>CondicionPagoJD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condición de pago (JD)</label>
    <referenceTo>Condicion_de_pago__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>