force-app/main/default/objects/Account/fields/ContactoPrincipal__c.field-meta.xml
<CustomField>
    <fullName>ContactoPrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto Principal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clientes</relationshipLabel>
    <relationshipName>Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>