force-app/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&quot;CL&quot;</defaultValue>
    <label>País</label>
    <length>3</length>
    <type>Text</type>
</CustomField>