force-app/main/default/objects/Account/fields/CreditLine__c.field-meta.xml
<CustomField>
    <fullName>CreditLine__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Límite de crédito</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>