force-app/main/default/objects/Account/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <defaultValue>&quot;CLP&quot;</defaultValue>
    <label>Moneda SN</label>
    <length>3</length>
    <type>Text</type>
</CustomField>