force-app/main/default/objects/Account/fields/DebtLine__c.field-meta.xml
<CustomField>
    <fullName>DebtLine__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Límite de deuda</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>