force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Campo requerido para sincronizar con SAP</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>