force-app/main/default/objects/Account/fields/EstadoSAP__c.field-meta.xml
<CustomField>
    <fullName>EstadoSAP__c</fullName>
    <label>Estado SAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creado sin validar</fullName>
                <default>true</default>
                <label>Creado sin validar</label>
            </value>
            <value>
                <fullName>Validado por SAP</fullName>
            </value>
            <value>
                <fullName>No Validado por SAP</fullName>
            </value>
            <value>
                <fullName>Cliente Inactivo en SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>