force-app/main/default/objects/Account/fields/FamiliaNegocio__c.field-meta.xml
<CustomField>
    <fullName>FamiliaNegocio__c</fullName>
    <label>Familia Negocio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>