force-app/main/default/objects/Account/fields/Giro__c.field-meta.xml
<CustomField>
    <fullName>Giro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Campo requerido para sincronizar con SAP</inlineHelpText>
    <label>Giro</label>
    <referenceTo>Giro__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>