force-app/main/default/objects/Account/fields/GroupCode__c.field-meta.xml
<CustomField>
    <fullName>GroupCode__c</fullName>
    <label>Código de grupo</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>