force-app/main/default/objects/Account/fields/NombreFantasia__c.field-meta.xml
<CustomField>
    <fullName>NombreFantasia__c</fullName>
    <label>Nombre Fantasía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>