force-app/main/default/objects/Account/fields/OportunidadesM__c.field-meta.xml
<CustomField>
    <fullName>OportunidadesM__c</fullName>
    <label>Oportunidades Monto</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>