force-app/main/default/objects/Account/fields/OportunidadesN__c.field-meta.xml
<CustomField>
    <fullName>OportunidadesN__c</fullName>
    <label>Oportunidades N°</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>