force-app/main/default/objects/Account/fields/Propiedades__c.field-meta.xml
<CustomField>
    <fullName>Propiedades__c</fullName>
    <label>Propiedades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QryGroup1</fullName>
                <label>SERVICIO BASICO</label>
            </value>
            <value>
                <fullName>QryGroup2</fullName>
                <label>ORDEN DE COMPA (801)</label>
            </value>
            <value>
                <fullName>QryGroup3</fullName>
                <label>QBLI (ITEM ORDEN DE COMPRA)</label>
            </value>
            <value>
                <fullName>QryGroup4</fullName>
                <label>HES (HOJA DE ENTRADA DE SERVICIO)</label>
            </value>
            <value>
                <fullName>QryGroup5</fullName>
                <label>NÚMERO DE RECEPCIÓN (802)</label>
            </value>
            <value>
                <fullName>QryGroup6</fullName>
                <label>CLIENTE CON ESTADO DE PAGO</label>
            </value>
            <value>
                <fullName>QryGroup7</fullName>
                <label>SOLO PARA FALABELLA (EN CAMPO 52 NÚMERO DE HES)</label>
            </value>
            <value>
                <fullName>QryGroup8</fullName>
                <label>NUMERO DE PROVEEDOR (NFP)</label>
            </value>
            <value>
                <fullName>QryGroup9</fullName>
                <label>NOMBRE COMPRADOR (AGREGAR EN EL CAMPO COMENTARIO)</label>
            </value>
            <value>
                <fullName>QryGroup10</fullName>
                <label>NUMERO DE MATERIAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>