force-app/main/default/objects/Account/fields/RUT_C__c.field-meta.xml
<CustomField>
    <fullName>RUT_C__c</fullName>
    <formula>TEXT(RUT_SD__c) &amp;&quot;-&quot;&amp;  UPPER(RUT_DV__c)</formula>
    <label>RUT</label>
    <type>Text</type>
</CustomField>