force-app/main/default/objects/Account/fields/RUT_SD__c.field-meta.xml
<CustomField>
    <fullName>RUT_SD__c</fullName>
    <label>RUT (sin dígito)</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>