force-app/main/default/objects/Account/fields/RUTC__c.field-meta.xml
<CustomField>
    <fullName>RUTC__c</fullName>
    <description>Rut completo en texto ej 61704000-K</description>
    <label>RUT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>