force-app/main/default/objects/Account/fields/SlpCode__c.field-meta.xml
<CustomField>
    <fullName>SlpCode__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Se debe pasar un valor por defecto de un usuario &quot;comodín&quot; ingresado en SAP, por el momento pasaremos el valor &quot;1&quot;</description>
    <label>Código del empleado de ventas</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>